GPU trigger for matrix dot shadow animations + avoiding dot flicker on hover

--- a/src/styles/_animations.scss
+++ b/src/styles/_animations.scss
@@ -43,6 +43,12 @@
   100% { box-shadow: 0 0 0 24px rgba($color-darkblue-darker-4, 0); }
 }
 
+@keyframes pulseTwo {
+  0%   { transform: scale(0); opacity: 1; }
+  50%  { transform: scale(1); }
+  100% { transform: scale(1); opacity: 0; }
+}
+
 @keyframes scaleUp {
   0%   { transform: scale(1); }
   100% { transform: scale(2); }
